--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "dependencies": {
+    "mqtt": "^1.7.4",
     "noble-device": "^1.1.0"
   },
   "devDependencies": {
